--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,16 +83,10 @@ services:
       CONFLUENT_SUPPORT_METRICS_ENABLE: "false"
       ZOOKEEPER_LOG4J_ROOT_LOGLEVEL: "WARN"
       ZOOKEEPER_TOOLS_LOG4J_LOGLEVEL: "WARN"
-      KAFKA_OPTS: "-Dzookeeper.4lw.commands.whitelist=ruok"
     volumes:
       - "sentry-zookeeper:/var/lib/zookeeper/data"
       - "sentry-zookeeper-log:/var/lib/zookeeper/log"
       - "sentry-secrets:/etc/zookeeper/secrets"
-    healthcheck:
-      test: ["CMD-SHELL", 'echo "ruok" | nc -w 2 -q 2 localhost 2181 | grep imok']
-      interval: 10s
-      timeout: 5s
-      retries: 6
   kafka:
     <<: *restart_policy
     depends_on:
@@ -114,11 +108,6 @@ services:
       - "sentry-kafka:/var/lib/kafka/data"
       - "sentry-kafka-log:/var/lib/kafka/log"
       - "sentry-secrets:/etc/kafka/secrets"
-    healthcheck:
-      test: ["CMD-SHELL", 'nc -z localhost 9092']
-      interval: 10s
-      timeout: 5s
-      retries: 6
   clickhouse:
     <<: *restart_policy
     image: "yandex/clickhouse-server:20.3.9.70"
@@ -244,8 +233,8 @@ services:
     command: '"0 0 * * * gosu sentry sentry cleanup --days $SENTRY_EVENT_RETENTION_DAYS"'
   nginx:
     <<: *restart_policy
-    ports:
-      - "$SENTRY_BIND:80/tcp"
+    expose:
+      - "80/tcp"
     image: "nginx:1.16"
     volumes:
       - type: bind
@@ -255,6 +244,15 @@ services:
     depends_on:
       - web
       - relay
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
+      - "traefik.http.routers.nginx.entrypoints=web"
+      - "traefik.http.routers.nginx.middlewares=redirect-to-https"
+      - "traefik.http.routers.nginx.rule=PathPrefix(`/`)"
+      - "traefik.http.routers.nginx-ssl.entrypoints=web-secure"
+      - "traefik.http.routers.nginx-ssl.tls=true"
+      - "traefik.http.routers.nginx-ssl.rule=PathPrefix(`/`)"
   relay:
     <<: *restart_policy
     image: "$RELAY_IMAGE"
@@ -271,6 +269,33 @@ services:
       - kafka
       - redis
       - web
+  lb:
+    image: traefik:v2.4.8
+    command:
+      - "--providers.docker=true"
+      - "--providers.docker.exposedbydefault=false"
+      - "--entrypoints.web.address=:80"
+      - "--entrypoints.web-secure.address=:443"
+      - "--providers.docker.network=${COMPOSE_PROJECT_NAME:-sentry_onpremise}_default"
+      - "--providers.file.directory=/configuration/"
+      - "--providers.file.watch=true"
+    labels:
+      # define a redirect middleware named redirect-to-https
+      - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
+      - "traefik.http.routers.redirs.rule=HostRegexp(`{host:.+}`)"
+      - "traefik.http.routers.redirs.entrypoint=web"
+      - "traefik.http.routers.redirs.middlewares=redirect-to-https"
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock:ro"
+      - ./traefik/configuration/:/configuration/
+      - ./traefik/certs/:/certs/
+    restart: always
+    depends_on:
+      - nginx
+
 volumes:
   sentry-data:
     external: true
